Added source code of version 2 and 3

--- a/src/html/darwinsArrows.html
+++ b/src/html/darwinsArrows.html
@@ -23,6 +23,23 @@
 		<script src="../js/version1/arrow.js"></script>
 		<script src="../js/version1/dna.js"></script>
 
+		<!-- Version 2 -->
+		<script src="../js/version2/setup.js"></script>
+		<script src="../js/version2/draw.js"></script>
+		<script src="../js/version2/population.js"></script>
+		<script src="../js/version2/arrow.js"></script>
+		<script src="../js/version2/dna.js"></script>
+		<script src="../js/version2/track.js"></script>
+
+		<!-- Version 3 -->
+		<script src="../js/version3/setup.js"></script>
+		<script src="../js/version3/draw.js"></script>
+		<script src="../js/version3/population.js"></script>
+		<script src="../js/version3/arrow.js"></script>
+		<script src="../js/version3/dna.js"></script>
+		<script src="../js/version3/track.js"></script>
+		<script src="../js/version3/sensor.js"></script>
+
 		<link rel="stylesheet" href="../css/mycss.css" />
 	</head>
 	<body>
